-*- coding: utf-8-unix -*-

			News file for CCStructs
			=======================

Revision 0.1.0-devel.3
----------------------

* Development of build infrastructure.

* Renamed "dtors" interface to "dtor".


Revision 0.1.0-devel.2
----------------------

* Added macro "ccstructs_core()".

* Added "pathname" interface.

* BACKWARDS INCOMPATIBILITY Renamed some types from "_iface_" to "_I_".


Revision 0.1.0-devel.1
----------------------

* BACKWARDS INCOMPATIBILITY Rewritten the "writable" interface to not be
  tied to standard streams for output.


Revision 0.1.0-devel.0
----------------------

* Initial development release.


### end of file
# Local Variables:
# mode: text
# fill-column: 72
# paragraph-start: "*"
# ispell-local-dictionary: "en_GB"
# End: